--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,14 @@
     <link rel="stylesheet" href="./styles.css">
 
 </head>
+
 <body>
-    hellow therer
+    <div class="header">
+        <h1>
+            <P><b>TIC TAC TOE GAME</b> </P>
+        </h1>
+    </div>
+
 </body>
+
 </html>
