--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 <body>
     <div class="header">
         <h1>
-            <P><b>TIC TAC TOE GAME</b> </P>
+            <P><b>TIC TAC TOE GAME</b> </P> <hr>
         </h1>
+        <div class="rules">
+       <p>How to play ? </p>
+       <p>The aim of the game is to make either 3 Xs or 3 Os in a row on 3 by 3 grid . At the start of the game , you have to choose either you will take X or O . 
+        You will be playing against an AI in the game , you can also play against other player if you want . Where the other player will manually pick the place where they will place their X/O as per their selected choice. </p>
     </div>
+</div>
 
 </body>
 
