--- a/index.html
+++ b/index.html
@@ -1,26 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
+	
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe </title>
-    <link rel="stylesheet" href="./styles.css">
-
+	<meta name="viewport" content=
+		"width=device-width, initial-scale=1.0">
+	<!-- CSS file Included -->
+	<link rel="stylesheet" type="text/css" href="tic.css">
+	<!-- JavaScript file included -->
+	<script src="tic.js"></script>
 </head>
 
 <body>
-    <div class="header">
-        <h1>
-            <P><b>TIC TAC TOE GAME</b> </P> <hr>
-        </h1>
-        <div class="rules">
-       <p>How to play ? </p>
-       <p>The aim of the game is to make either 3 Xs or 3 Os in a row on 3 by 3 grid . At the start of the game , you have to choose either you will take X or O . 
-        You will be playing against an AI in the game , you can also play against other player if you want . Where the other player will manually pick the place where they will place their X/O as per their selected choice. </p>
-    </div>
-</div>
-
+	<div id="main">
+		<h1>TIC TAC TOE</h1>
+        <h2>Tic-Tac-Toe is a zero-sum game, which means that 
+            if both players are playing their best, the 
+            game will end in a Tie <br></h2>
+		<p id="ins">
+			Game starts by just Tap on
+			box<br><br>
+            First Player is <b>player X</b>
+			Second Player is <b>player Y</b>
+		</p>
+		<br><br>
+		<div class = "ui">
+			<div class="row">
+				<input type="text" id= "b1"
+					class="cell" onclick="myfunc_3(); myfunc();"
+					readonly>
+				<input type="text" id= "b2"
+					class="cell" onclick="myfunc_4(); myfunc();"
+					readonly>
+				<input type="text" id= "b3" class="cell"
+					onclick="myfunc_5(); myfunc();"
+					readonly>
+			</div>
+			<div class="row">
+				<input type="text" id= "b4"
+					class="cell" onclick="myfunc_6(); myfunc();"
+					readonly>
+				<input type="text" id= "b5"
+					class="cell" onclick="myfunc_7(); myfunc();"
+					readonly>
+				<input type="text" id= "b6"
+					class="cell" onclick="myfunc_8(); myfunc();"
+					readonly>
+			</div>
+			<div class="row">
+				<input type="text" id= "b7"
+					class="cell" onclick="myfunc_9(); myfunc();"
+					readonly>
+				<input type="text" id= "b8"
+					class="cell" onclick="myfunc_10();myfunc();"
+					readonly>
+				<input type="text" id= "b9"
+					class="cell" onclick="myfunc_11();myfunc();"
+					readonly>
+			</div>
+		</div>
+		<br><br><br>
+		
+		<button id="but" onclick="myfunc_2()">
+			RESET
+		</button>
+		<br><br>
+		<p id="print"></p>
+	</div>
 </body>
 
 </html>
