--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- CSS file Included -->
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 	<!-- JavaScript file included -->
-	<script src="tic.js"></script>
+	<script src="./index.js"></script>
 </head>
 
 <body>
